[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_Game-Assistant"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0.1"
python = "^3.8"
replit = "^3.0.0"
flask = "^1.1.4"
[tool.poetry.dev-dependencies]